...
    // Player? player = AuthFunction().playerFromUser(user);
    if (player == null) {
      _auth.signOut();
      return AuthenticationScreen(firebaseCollection: firebaseCollection);
    }
    return StreamBuilder<PlayerData?>(
        key: Key("profile-page"),
        stream: DatabaseService(
                uid: player.playerId, firebaseCollection: firebaseCollection)
            .userData,
        builder: (context, snapshot) {
          if (snapshot.hasData) {
            return Scaffold(
...
                      fontWeight: FontWeight.bold,
                      fontSize: 25,
                      color: globalColours.baseColour),
                ),
                actions: [
                  IconButton(
                    key: Key("sign-out"),
                    onPressed: () {
                      showDialog(
                          context: context,
                          builder: (context) => AlertDialog(
                                shape: RoundedRectangleBorder(
                                    borderRadius: BorderRadius.circular(15)),
...
                                actions: [
                                  TextButton(
                                      key: Key("stay-signed-in-option"),
                                      onPressed: () => Navigator.pop(context),
                                      child: Text("No")),
                                  TextButton(
                                      key: Key("sign-out-option"),
                                      onPressed: () {
                                        _auth.signOut();
                                        Navigator.pop(context);
                                      },
                                      child: Text("Sign out"))
                                ],
...

    return Column(
      children: [
        SizedBox(
          height: 15,
        ),
        ProfileWidget(imagePth, onClicked: () {}, key: Key("profile-picture")),
        SizedBox(
          height: 5,
        ),
        Text(user.playerName,
            style: TextStyle(
                color: Colors.black, fontWeight: FontWeight.bold, fontSize: 24),
            key: Key("name")),
        SizedBox(
          height: 5,
        ),
        Text(user.email,
            style: TextStyle(color: Colors.black54), key: Key("email")),
        SizedBox(
          height: 5,
        ),
        Text(user.bio, style: TextStyle(color: Colors.black), key: Key("bio")),
        SizedBox(
          height: 100,
        ),
        OutlinedButton(
            onPressed: () {
              showDialog(
...
                            RichText(
                              textAlign: TextAlign.center,
                              text: TextSpan(children: [
                                WidgetSpan(
                                    child: Container(
                                  child: IntrinsicWidth(
                                    child: Text("Choose a Face Level",
                                        style: TextStyle(
                                            color: Colors.white,
                                            fontWeight: FontWeight.bold)),
                                  ),
                                  padding: EdgeInsets.symmetric(
                                      vertical: 3, horizontal: 10),
...
                            RichText(
                              textAlign: TextAlign.center,
                              text: TextSpan(children: [
                                WidgetSpan(
                                    child: Container(
                                  child: IntrinsicWidth(
                                    child: Text("Learn a Face Level",
                                        style: TextStyle(
                                            color: Colors.white,
                                            fontWeight: FontWeight.bold)),
                                  ),
                                  padding: EdgeInsets.symmetric(
                                      vertical: 3, horizontal: 10),
...
                            RichText(
                              textAlign: TextAlign.center,
                              text: TextSpan(children: [
                                WidgetSpan(
                                    child: Container(
                                  child: IntrinsicWidth(
                                    child: Text("Make a Face Level",
                                        style: TextStyle(
                                            color: Colors.white,
                                            fontWeight: FontWeight.bold)),
                                  ),
                                  padding: EdgeInsets.symmetric(
                                      vertical: 3, horizontal: 10),
...
                          TextButton(
                              onPressed: () => Navigator.pop(context),
                              child: Text("Ok"))
                        ],
                      ));
            },
            child: Text("Statistics",
                style: TextStyle(
                  color: globalColours.baseColour,
                  fontSize: 20,
                  fontWeight: FontWeight.bold,
                )),
            style: ElevatedButton.styleFrom(fixedSize: Size(200, 50))),
...
              Navigator.push(
                  context,
                  MaterialPageRoute(
                      builder: (context) => SettingsPage(
                          firebaseCollection: firebaseCollection)));
            },
            child: Text("Settings",
                style: TextStyle(
                  color: globalColours.baseColour,
                  fontSize: 20,
                  fontWeight: FontWeight.bold,
                )),
            style: ElevatedButton.styleFrom(fixedSize: Size(200, 50))),
...
