...
        TextInputAction.next,
        TextInputType.emailAddress,
        "Email",
        false,
        Icons.email,
        (value) => EmailFieldValidator.validate(value),
        key: Key("email-field"),
        );

    var passwordField = InputWidget(
        _passwordController,
        TextInputAction.next,
        TextInputType.text,
        "Password",
        true,
        Icons.password,
        (value) => PasswordFieldValidator.validate(value),
        key: Key("password-field"),
        );

    var loginButton = ElevatedButton(
      key: Key("login-button"),
      onPressed: () async {
        if (_formKey.currentState!.validate()) {
          setState(() {
            loading = true;
          });
          var player = await _auth.logIn(
...
