...
      PersistentBottomNavBarItem(
          icon: Icon(Icons.games),
          title: "Learn",
          activeColorPrimary: globalColours.baseColour,
          inactiveColorPrimary: Colors.grey),
      PersistentBottomNavBarItem(
          icon: Icon(Icons.person, key: Key("profile-link")),
          title: "Profile",
          activeColorPrimary: globalColours.baseColour,
          inactiveColorPrimary: Colors.grey),
    ];
  }

  // NOT PERSISTENT NAV BAR
...
